Add some metadata services